# rand-checker

./: README.md  pyproject.toml
config/: example.ini
docs/: Randomness Checker SRS V001.md
randomcheck/: __init__.py  __main__.py  analysis.py  app.py  config.py  errors.py  io.py  logging.py  perf.py  reporting.py
randomcheck/tests/: __init__.py  base.py  factory.py  statistical.py  utils.py
tests/: conftest.py  test_analysis.py  test_app_integration.py  test_config.py  test_io.py  test_logging.py  test_perf.py  test_reporting.py
